--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>This is heading 1</h1>
+    <h1>HEY MA LOOK I DID A THING</h1>
 <script scr="script.js"></script>
 </body>
 </html>
