finished so far

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>HEY MA LOOK I DID A THING</h1>
-<script scr="script.js"></script>
+    <h1 id="malook">CLICK THE BUTTON</h1>
+    <h2 id="clkbtnpls">HEY YOU, YA YOU DONT CLICK THAT BUTTON DONT DO IT</h2>
+    <button id="thebtn">THE BUTTON</button>
+<script src="script.js"></script>
 </body>
 </html>
