--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="malook">CLICK THE BUTTON</h1>
     <h2 id="clkbtnpls">HEY YOU, YA YOU DONT CLICK THAT BUTTON DONT DO IT</h2>
     <button id="thebtn">THE BUTTON</button>
+    <a href="NewPage.html" id="NextPageHL">Go To Next Page</a>
 <script src="script.js"></script>
 </body>
 </html>
