changes where files are

--- a/ShakeButton/NewPage.html
+++ b/ShakeButton/NewPage.html
@@ -10,6 +10,6 @@
 <body>
     <button id="ShakeButton">Click To Shake</button>
     <script type="text/javascript" src="NewPagescript.js"></script>
-    <a id="LastPage" href="index.html">Go To Last Page</a>
+    <a id="LastPage" href="../MainPage/index.html">Go To Last Page</a>
 </body>
 </html>
