--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shit</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="MainPage/main.css">
 </head>
 <body>
     <h1 id="malook">CLICK THE BUTTON</h1>
     <h2 id="clkbtnpls">HEY YOU, YA YOU DONT CLICK THAT BUTTON DONT DO IT</h2>
     <button id="thebtn">THE BUTTON</button>
-    <a href="../ShakeButton/NewPage.html" id="NextPageHL">Go To Next Page</a>
-<script src="script.js"></script>
+    <a href="ShakeButton/NewPage.html" id="NextPageHL">Go To Next Page</a>
+    <script src="MainPage/script.js"></script>
 </body>
 </html>
