--- a/ShakeButton/NewPage.html
+++ b/ShakeButton/NewPage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <button id="ShakeButton">Click To Shake</button>
+    <a id="LastPage" href="../index.html">Go To Last Page</a>
     <script type="text/javascript" src="NewPagescript.js"></script>
-    <a id="LastPage" href="../MainPage/index.html">Go To Last Page</a>
 </body>
 </html>
