--- a/Circle/Circle.html
+++ b/Circle/Circle.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Circlecss.css">
 </head>
 <body>
-    <canvas id="canvas" width="device-width" height="device-height"></canvas>
+    <canvas id="canvas"></canvas>
 
     <script src="CircleScript.js"></script>
 </body>
