--- a/ShakeButton/NewPage.html
+++ b/ShakeButton/NewPage.html
@@ -10,7 +10,7 @@
 <body>
     <button id="ShakeButton">Click To Shake</button>
     <a id="LastPage" href="../index.html">Go To Last Page</a>
-    <a href="../Circle/Circle.html">TEST</a>
+    <a href="../Circle/Circle.html", id="CirclePage">Go To Circle Page</a>
     <script type="text/javascript" src="NewPagescript.js"></script>
 </body>
 </html>
