--- a/ShakeButton/NewPage.html
+++ b/ShakeButton/NewPage.html
@@ -11,6 +11,7 @@
     <button id="ShakeButton">Click To Shake</button>
     <a id="LastPage" href="../index.html">Go To Last Page</a>
     <a href="../Circle/Circle.html", id="CirclePage">Go To Circle Page</a>
+    <a href="../OtherPage/OtherPage.html", id="OtherPage">Go To Other Page</a>
     <script type="text/javascript" src="NewPagescript.js"></script>
 </body>
 </html>
