umm added things chaged things

--- a/Platformer/Platformer.html
+++ b/Platformer/Platformer.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Page</title>
+    <title>Platformer</title>
 
-    <link rel="stylesheet" href="OtherPage.css">
+    <link rel="stylesheet" href="Platformer.css">
 </head>
 <body>
-    <canvas id="cav"></canvas>
-    <a href="../Platformer/Platformer.html", id="platformerpage"></a>
-    
-    <script src="OtherPage.js"></script>
+    <canvas id="c"></canvas>
+
+    <script src="Platformer.js"></script>
 </body>
 </html>
